<resources>

    <string name="wait">Подождите</string>
    <string name="ok">OK</string>
    <string name="choose_program">Выберите программу</string>
    <string name="expand_text">Читать дальше</string>
    <string name="collapse_text">Свернуть</string>
    <string name="error_title_template">Ошибка%s</string>
    <string name="unknown_error">Неизвестная ошибка</string>

    <!-- channels -->
    <string name="channels_search">Поиск</string>
    <string name="channels_not_found">Ничего не нашлось</string>
    <string name="favourite_channels_not_found">У вас нет избранных каналов</string>

    <!-- channel -->
    <string name="channel_id">ID</string>
    <string name="channel_subscribers">Подписчиков</string>
    <string name="channel_views">Просмотров</string>
    <string name="channel_video_count">Кол-во видео</string>
    <string name="channel_created">Дата создания</string>
    <string name="channel_country">Страна</string>
    <string name="channel_keywords">Ключевые слова</string>
    <string name="channel_move_to_youtube">Перейти на YouTube</string>
    <string name="channel_move_to_statistics">Статистика</string>
    <string name="channel_move_to_videos">Видео</string>

    <!-- statistics -->
    <string name="statistics_updated">Обновлено:</string>
    <string name="statistics_general_statistics_title">Общая статистика</string>
    <string name="statistics_videos_statistics_title">Статистика по видео</string>
    <string name="statistics_subscribers">Подписки</string>
    <string name="statistics_views">Просмотры</string>
    <string name="statistics_comments">Комментарии</string>
    <string name="statistics_likes">Лайки</string>
    <string name="statistics_dislikes">Дизлайки</string>
    <string name="statistics_avg_daily">Среднее\nза день</string>
    <string name="statistics_avg_video">Среднее\nза видео</string>
    <string name="statistics_14_days">14 дней</string>
    <string name="statistics_30_days">30 дней</string>
    <string name="statistics_60_days">60 дней</string>
    <string name="statistics_90_days">90 дней</string>
    <string name="statistics_180_days">180 дней</string>
    <string name="statistics_365_days">365 дней</string>
    <string name="statistics_absolute_values">Абсолютные\nзначения</string>
    <string name="statistics_relative_values">Относительные\nзначения</string>
    <string name="statistics_begin_date">Дата начала</string>
    <string name="statistics_end_date">Дата конца</string>
    <string name="statistics_chart_no_data">Нет данных</string>

    <!-- videos -->
    <string name="videos_not_found">Ничего нет</string>
    <string name="videos_export_to_csv">Экспорт в CSV</string>

    <!-- video -->
    <string name="video_id">ID</string>
    <string name="video_scheduled_start_date">Время начала (план.)</string>
    <string name="video_start_date">Время начала</string>
    <string name="video_end_date">Время окончания</string>
    <string name="video_published">Время публикации</string>
    <string name="video_duration">Длительность</string>
    <string name="video_views">Просмотров</string>
    <string name="video_likes">Лайков</string>
    <string name="video_dislikes">Дизлайков</string>
    <string name="video_comments">Комментариев</string>
    <string name="video_tags">Тэги</string>
    <string name="video_move_to_youtube">Перейти на YouTube</string>

    <string name="period_template">%1$s - %2$s</string>

    <string name="dialog_long_loading_title">Вы хотите продолжить?</string>
    <string name="dialog_long_loading_message">Загрузка данных может быть долгой</string>
    <string name="dialog_long_loading_continue">Продолжить</string>
    <string name="dialog_long_loading_cancel">Отмена</string>

</resources>
